<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplied">×</string>
    <string name="divided">÷</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="all_clear">AC</string>
    <string name="save">save</string>
    <string name="load">load</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <string name="delete">delete</string>
    <string name="x">x</string>
    <string name="set_x">set x</string>
</resources>
