<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7"
        tools:context="com.example.franciscogallardo.calculator.MainActivity">

    <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="50sp"
            android:gravity="center"
            android:textAlignment="center"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:orientation="horizontal"
                  android:weightSum="3">

        <Button
                android:id="@+id/x"
                android:text="@string/x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:gravity="center"
                android:onClick="buttonX"
                android:textAllCaps="false"/>

        <Button
                android:id="@+id/set_x"
                android:text="@string/set_x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:gravity="center"
                android:onClick="buttonSetX"
                android:textAllCaps="false"/>

        <TextView
                android:id="@+id/display_x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="50sp"
                android:gravity="center"
                android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="2">
            <Button
                    android:id="@+id/save"
                    android:text="@string/save"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:onClick="buttonSave"
                    android:textAllCaps="false"/>

            <Button
                    android:id="@+id/load"
                    android:text="@string/load"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:onClick="buttonLoad"
                    android:textAllCaps="false"/>
        </LinearLayout>

        <Button
                android:id="@+id/left_parenthesis"
                android:text="@string/left_parenthesis"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonLeftParenthesis"
                android:textAllCaps="false"/>

        <Button
                android:id="@+id/right_parenthesis"
                android:text="@string/right_parenthesis"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonRightParenthesis"
                android:textAllCaps="false"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="2">

            <Button
                    android:id="@+id/all_clear"
                    android:text="@string/all_clear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:onClick="buttonAllClear"
                    android:textAllCaps="false"/>

            <Button
                    android:id="@+id/delete"
                    android:text="@string/delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:onClick="buttonDelete"
                    android:textAllCaps="false"/>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4" >

        <Button
                android:id="@+id/seven"
                android:text="@string/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonSeven"/>

        <Button
                android:id="@+id/eight"
                android:text="@string/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonEight"/>

        <Button
                android:id="@+id/nine"
                android:text="@string/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonNine"/>

        <Button
                android:id="@+id/divided"
                android:text="@string/divided"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center" android:onClick="buttonDivided"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4" >

        <Button
                android:id="@+id/four"
                android:text="@string/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonFour"/>

        <Button
                android:id="@+id/five"
                android:text="@string/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonFive"/>

        <Button
                android:id="@+id/six"
                android:text="@string/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonSix"/>

        <Button
                android:id="@+id/multiplied"
                android:text="@string/multiplied"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonMultiplied"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4" >

        <Button
                android:id="@+id/one"
                android:text="@string/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonOne"/>

        <Button
                android:id="@+id/two"
                android:text="@string/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonTwo"/>

        <Button
                android:id="@+id/three"
                android:text="@string/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonThree"/>

        <Button
                android:id="@+id/plus"
                android:text="@string/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center" android:onClick="buttonPlus"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4" >

        <Button
                android:id="@+id/zero"
                android:text="@string/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center"
                android:onClick="buttonZero"/>

        <Button
                android:id="@+id/equals"
                android:text="@string/equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="50sp"
                android:gravity="center"
                android:backgroundTint="@color/colorEqualsButton"
                android:onClick="buttonEquals"/>

        <Button
                android:id="@+id/minus"
                android:text="@string/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:gravity="center" android:onClick="buttonMinus"/>
    </LinearLayout>

</LinearLayout>
